src/main/java/com/example/updatemebook/errors/UserBadRequestException.java
package com.example.updatemebook.errors;

public class UserBadRequestException extends RuntimeException {
    public UserBadRequestException(String message) {
        super(message);
    }
}
